fix: text align

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -212,17 +212,17 @@ a.navbar-item.is-active {
           
           .column4 {
             width: 110px;
-            text-align: right;
+            text-align: left;
           }
           
           .column5 {
             width: 170px;
-            text-align: right;
+            text-align: left;
           }
           
           .column6 {
             width: 222px;
-            text-align: right;
+            text-align: left;
             padding-right: 62px;
           }
           
